--- a/package.json
+++ b/package.json
@@ -10,10 +10,24 @@
     "format": "prettier src/ --write"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.5.1",
+    "@neondatabase/serverless": "^0.10.4",
+    "@prisma/adapter-neon": "^6.0.1",
+    "@prisma/client": "^6.0.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.62.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "hono": "^4.6.12",
+    "lucide-react": "^0.462.0",
     "next": "15.0.3",
+    "prisma": "^6.0.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "superjson": "^2.2.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
